package modelo.mapa;

public enum TipoCelda {
    SUELO,
    MURO,
    PUERTA,
    TRAMPA,
    TESORO,
    INICIO,
    SALIDA,
    ROCA,
    ARBUSTO
}
