@startuml
title modelo.mapa

skinparam classAttributeIconSize 0
skinparam shadowing false

package "modelo.mapa" #FFFFFF {

  interface "InterfazCueva" as ICueva {
    + String getId()
    + int getFilas()
    + int getColumnas()
    + boolean estaDentro(int f, int c)
    + Celda getCelda(int f, int c)
    + void cambiarTipoCelda(int f, int c, TipoCelda t)
    + boolean esTransitable(int f, int c)
    + ListaSE(Celda) getCeldasAlcanzables(int fi, int ci, int p)
    + ListaSE(Celda) getCaminoMinimo(int fi, int ci, int fd, int cd)
    + int getDistanciaMinima(int fi, int ci, int fd, int cd)
  }

  class Cueva {
    - String id
    - int filas
    - int columnas
    - ListaSE(ListaSE(Celda)) matriz
    ..
    + boolean estaDentro(int f, int c)
    + Celda getCelda(int f, int c)
    + void cambiarTipoCelda(int f, int c, TipoCelda t)
    + boolean esTransitable(int f, int c)
    + ListaSE(Celda) getCeldasAlcanzables(int fi, int ci, int p)
    + ListaSE(Celda) getCaminoMinimo(int fi, int ci, int fd, int cd)
    + int getDistanciaMinima(int fi, int ci, int fd, int cd)
  }

  interface "InterfazCelda" as ICelda {
    + int getFila()
    + int getColumna()
    + TipoCelda getTipo()
    + void setTipo(TipoCelda t)
    + boolean esTransitable()
  }

  class Celda {
    - Posicion posicion
    - TipoCelda tipo
    ..
    + boolean esTransitable()
  }

  interface "InterfazPosicion" as IPosicion {
    + int getFila()
    + int getColumna()
  }

  class Posicion {
    - int fila
    - int columna
  }

  enum TipoCelda {
    SUELO
    MURO
    PUERTA
    TRAMPA
    TESORO
    INICIO
    SALIDA
    ROCA
    ARBUSTO
  }

  Cueva ..|> ICueva
  Cueva *-- ListaSE
  Celda ..|> ICelda
  Celda *-- Posicion
  Celda --> TipoCelda
  Posicion ..|> IPosicion
}
@enduml
